extras/hello-world/hello-world-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  labels:
    app: hello-world
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  clusterIP: None
  selector:
    app: hello-world
